# job-search

./: .env.example  .gitignore  .pre-commit-config.yaml  :memory:  AGENTS.md  README.md  config.yaml  profile.txt  pyproject.toml  resume.txt
data/: gics_reference.csv  rejections.db.bak
docs/superpowers/plans/: 2025-07-09-refactor.md  2025-07-13-job-search-refactor.md
docs/superpowers/specs/: 2025-07-13-job-search-refactor-design.md
scripts/: migrate_to_merged_db.py
src/: __main__.py  cli.py  config.py  enrich.py  gics.py  pipeline.py  telegram.py
src/job_search/: __init__.py  __main__.py  cli.py  db.py  enrich.py  gics.py  pipeline.py  scrape.py
tests/: test_cli.py  test_config.py  test_db.py  test_filters.py  test_gics.py  test_pipeline.py
tests/job_search/: test_cli.py  test_config.py  test_db.py  test_filters.py  test_gics.py  test_pipeline.py
